# pylive

./: .sublime-project.sublime-workspace  C  Camera_Spy.ini  GraphDetailsView.py  GraphModel.py  GraphRunner.py  GraphView.py  HEY.ini  LiveScript.lnk  New_Title.ini  Perspy.ini  Perspy_v0_5_0.ini  Python_Node_Canvas.ini  QtWatchCode.lnk  ReadMe.md  ScriptEditor.py  Sketchbook.ini  TODOs.md  Viewport_Demo.ini  ____Perspy_v0_5_0.ini  camera_lines.pkl  core.py  highlighters.py  imgui.ini  imgui.node_editor.json  imx_my_imgui_extensions_.ini  judit  live_code_minitest.py  main.py  nodesheet_and_details_view.py  parse_jupyter_notebook.py  pylive.sublime-project  pylive.sublime-workspace  pyproject.toml  requirements.txt  signals_with_batch.py  ui.py  unique.py
QtGraphEditor/: nodesheet_and_details_view.py
assets/: livepreview_qwidget_example_script.py
blog/: 2024_10_15_using_venv.md  2024_10_16-add_python_module_to_windows_startmenu.md  2024_12_18-houdini-meats-python.md  2025-12-09-hot_reloading-jurigged.md  2025-12-14-reloading-package.md  2025_12_12-rerrun_python_on_change.py
docs/: 2024_10_15_using_venv.md  2024_10_30-interactively-execute-scripts.md  2024_11_14-bugs  2024_12_06-hot-reloading-a-python-script.md  2025_10_17-working with project-toml.md
examples/: definitions.py  livescript.py  main.py  visual_coding.py
experiments/: ColorSpace-chair.ipynb  ListItemDelegate-example.py  MapRolesToColumns.py  QT_from_notebook.ipynb  analyze_variable_scope.py  animate_numpy_image_to_qimage.py  ascii_tree.py  ast_from_scratch.py  built-a-dependency-graph-of-a-python-codebase.py  connect_to_ipython.py  embed_pyedifice.py  get_scope_block_of_a_line.py  inspect_available_functions.py  inspect_functions_experiment.py  interactive_qgraphicsview.py  parse_exception_traceback.py  qstyle_draw_ptimitive_elements.py  reloading_experiment.py  render_shaders_in_imgui.py  set_scriptedit_highlighter.py  simple_struct.py  system_dark_color_scheme.json  system_light_color_scheme.json  unified_titlebar.py  visualize_function_dependencies.py
expreiments/: GLCanvasWidget_with_request_animation.py  PeopleModel.py  QT_from_notebook.ipynb  acr_editor.py  built-a-dependency-graph-of-a-python-codebase.py  display_builtin_icons.py  display_colorpalette.py  embed_pyedifice.py  file_textdocument_link.py  function_widget.py  gldraw_outside_widget.py  graph_layout.ipynb  inspect_available_functions.py  inspect_functions_experiment.py  interactive_qt_with_cells.py  jedi_test.py  layout_with_qgraphics_items.py  (+23 more)
(+701 files in other folders)
